dataset1235/2025-2/1153765216/users/3700556413/executions/3138746197_3788368433.log
== SUBMISSION (2025-08-12 18:55:07)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
nome = (input("kubo"))

# Impressao de saidas
print(nome)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
kuboGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
kuboDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
kuboPython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
kuboAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
kuboTeste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 18:49:27)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(kubo)

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(kubo)
                ^^^^
NameError: name 'kubo' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(kubo)
                ^^^^
NameError: name 'kubo' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(kubo)
                ^^^^
NameError: name 'kubo' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(kubo)
                ^^^^
NameError: name 'kubo' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(kubo)
                ^^^^
NameError: name 'kubo' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
